--- a/Views/Home/Movies.cshtml
+++ b/Views/Home/Movies.cshtml
@@ -18,7 +18,7 @@
             {
                 <option value="@c.CategoryID">@c.CategoryName</option>
             }
-        </select>
+        </select><br />
 
         <label asp-for="Title">Title:</label>
         <input asp-for="Title" /><br />
