--- a/Views/Home/MovieList.cshtml
+++ b/Views/Home/MovieList.cshtml
@@ -30,7 +30,8 @@
             <td>@x.Edited</td>
             <td>@x.LentTo</td>
             <td>@x.Notes</td>
-            <td><a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a></td>
+            <td><a asp-controller="Home" asp-action="Edit" asp-route-movieEntryID="@x.Title">Edit</a></td>
+            <td><a asp-controller="Home" asp-action="Delete">Delete</a></td>
         </tr>
             }
     </tbody>
