--- a/Views/Home/MovieList.cshtml
+++ b/Views/Home/MovieList.cshtml
@@ -31,7 +31,7 @@
             <td>@x.LentTo</td>
             <td>@x.Notes</td>
             <td><a asp-controller="Home" asp-action="Edit" asp-route-movieEntryID="@x.Title">Edit</a></td>
-            <td><a asp-controller="Home" asp-action="Delete">Delete</a></td>
+            <td><a asp-controller="Home" asp-action="Delete" asp-route-movieEntryID="@x.Title">Delete</a></td>
         </tr>
             }
     </tbody>
